force-app/main/default/objects/tc9_et__Invoice_Item__c/tc9_et__Invoice_Item__c.object-meta.xml
<CustomObject>
    <description>A child object to the Invoice that holds individual Quantity, Invoice Rate and Invoice Description details of the items being invoiced and related Project Codes and Purchase Order Numbers.</description>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>INVITM-{0000000000}</displayFormat>
        <label>Invoice Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>