force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <formula>tc9_et__Employee__r.FirstName &amp; &quot; &quot; &amp; tc9_et__Employee__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>