force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Assignment that applies to the Invoice Item</description>
    <inlineHelpText>The Assignment that the Invoice Item will be applied</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>