force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Client__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Client that applies to the Invoice Item</description>
    <inlineHelpText>Defines the Client that applies to the Invoice Item</inlineHelpText>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>