force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Employee__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Employee that applies to the Invoice Item</description>
    <inlineHelpText>Defines the Employee that applies to the Invoice Item</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>