force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Entry_Date__c</fullName>
    <description>The date that the Invoice Item applies</description>
    <inlineHelpText>The date that the Invoice Item applies</inlineHelpText>
    <label>Entry Date</label>
    <type>Date</type>
</CustomField>