force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Expense__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Expense that applies to the Invoice Item (if applicable)</description>
    <inlineHelpText>Defines the Expense that applies to the Invoice Item (if applicable)</inlineHelpText>
    <label>Expense</label>
    <referenceTo>tc9_et__Expense__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>InvoiceItems</relationshipName>
    <type>Lookup</type>
</CustomField>