force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Fee_Type__c</fullName>
    <description>Identifies the Type of Invoiceable Fee the Invoice Item is for. Derived from the related Pay Transaction</description>
    <inlineHelpText>Identifies the Type of Invoiceable Fee the Invoice Item is for. Derived from the related Pay Transaction</inlineHelpText>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Fee_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>