force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Has_Been_Credited__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Has_Been_Credited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that an Invoice Item is related to an Invoice that has been credited</description>
    <inlineHelpText>Indicates that an Invoice Item is related to an Invoice that has been credited</inlineHelpText>
    <label>Has Been Credited</label>
    <type>Checkbox</type>
</CustomField>