force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Invoice__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Invoice that applies to the Invoice Item</description>
    <inlineHelpText>The Invoice that applies to the Invoice Item</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>tc9_et__Invoice__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>InvoiceItems</relationshipName>
    <type>Lookup</type>
</CustomField>