force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Invoice_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Item_Description__c</fullName>
    <description>The Description that will be shown on the Invoice for the Invoice Item</description>
    <inlineHelpText>The Description that will be shown on the Invoice for the Invoice Item</inlineHelpText>
    <label>Invoice Item Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>