force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Invoice_PDF__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_PDF__c</fullName>
    <description>To be used to preview the PDF version of the related Invoice</description>
    <formula>tc9_et__Invoice__r.tc9_et__Invoice_PDF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To be used to preview the PDF version of the related Invoice</inlineHelpText>
    <label>Invoice PDF</label>
    <type>Text</type>
</CustomField>