force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Invoice_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Rate__c</fullName>
    <description>The Invoice Rate (exclusive of invoice tax) that will be applied to the Invoice Item</description>
    <inlineHelpText>The Invoice Rate (exclusive of invoice tax) that will be applied to the Invoice Item</inlineHelpText>
    <label>Invoice Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>