force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Invoice_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Tax_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Invoice Tax ID that applies to the Invoice Item</description>
    <inlineHelpText>The Invoice Tax ID that will be used for the Invoice Item.</inlineHelpText>
    <label>Invoice Tax ID</label>
    <referenceTo>tc9_et__Invoice_Tax_ID__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>