force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Invoice_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Tax_Rate__c</fullName>
    <description>The Tax Rate that will be used for the Invoice Item.</description>
    <inlineHelpText>The Tax Rate that will be used for the Invoice Item.</inlineHelpText>
    <label>Invoice Tax Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>