force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Invoice_Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Total_Tax__c</fullName>
    <description>The Invoice Tax total that applies to the Invoice Item</description>
    <inlineHelpText>The Invoice Tax total that applies to the Invoice Item</inlineHelpText>
    <label>Invoice Total Tax</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>