force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Original_Credit_Invoice_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Original_Credit_Invoice_Item_ID__c</fullName>
    <description>When an Invoice Item is created via a Re-Invoice process, this field indicates the Record ID of the corresponding Invoice Item related to the Credit Note</description>
    <inlineHelpText>When an Invoice Item is created via a Re-Invoice process, this field indicates the Record ID of the corresponding Invoice Item related to the Credit Note</inlineHelpText>
    <label>Original Credit - Invoice Item ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>