force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Original_Invoice_Invoice_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Original_Invoice_Invoice_Item_ID__c</fullName>
    <description>When an Invoice Item is created via a Credit Note process, this field indicates the Record ID of the corresponding Invoice Item related to the Original Invoice</description>
    <inlineHelpText>When an Invoice Item is created via a Credit Note process, this field indicates the Record ID of the corresponding Invoice Item related to the Original Invoice</inlineHelpText>
    <label>Original Invoice - Invoice Item ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>