force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Pay_Code_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Pay_Code_Sort_Order__c</fullName>
    <description>Defines the Sort Order applied to the related Pay Code. The sort order controls ordering on Invoice PDFs</description>
    <inlineHelpText>Defines the Sort Order applied to the related Pay Code. The sort order controls ordering on Invoice PDFs</inlineHelpText>
    <label>Pay Code Sort Order</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>