force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Pay_Transaction__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Pay_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Pay Transaction that applies to the Invoice Item</description>
    <inlineHelpText>Defines the Pay Transaction that applies to the Invoice Item</inlineHelpText>
    <label>Pay Transaction</label>
    <referenceTo>tc9_pr__Pay_Transaction__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>