force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Payee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Payee that applies to the Invoice Item</description>
    <inlineHelpText>Defines the Payee that applies to the Invoice Item</inlineHelpText>
    <label>Payee</label>
    <referenceTo>tc9_pr__Payee__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>