force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Project_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Project_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Project Code associated with the Invoice Item</description>
    <inlineHelpText>Defines the Project Code associated with the Invoice Item</inlineHelpText>
    <label>Project Code</label>
    <referenceTo>tc9_pr__Project_Code__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>