force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Purchase_Order_Number__c</fullName>
    <description>Defines the Purchase Order Number that applies to the Invoice Item</description>
    <inlineHelpText>Defines the Purchase Order Number that applies to the Invoice Item</inlineHelpText>
    <label>Purchase Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>