force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Quantity__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Quantity__c</fullName>
    <description>Defines the Quantity that applies to the Invoice Item</description>
    <inlineHelpText>Defines the Quantity that applies to the Invoice Item</inlineHelpText>
    <label>Quantity</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>