force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/tc9_et__Timesheet_Item__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Timesheet Allowance that applies to the Invoice Item (if applicable)</description>
    <inlineHelpText>Defines the Timesheet Allowance that applies to the Invoice Item (if applicable)</inlineHelpText>
    <label>Timesheet Item</label>
    <referenceTo>tc9_et__Timesheet_Item__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>