force-app/main/default/objects/tc9_et__Invoice_Item__c/recordTypes/tc9_et__Allowance.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Allowance</fullName>
    <active>true</active>
    <description>To be used for Invoice Items relating to Allowance Items</description>
    <label>Allowance</label>
</RecordType>