force-app/main/default/objects/tc9_et__Invoice_Item__c/recordTypes/tc9_et__Expense.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Expense</fullName>
    <active>true</active>
    <description>To be used for Invoice Items relating to Expense Items</description>
    <label>Expense</label>
</RecordType>