force-app/main/default/objects/tc9_et__Invoice_Item__c/recordTypes/tc9_et__FEE.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__FEE</fullName>
    <active>true</active>
    <description>To be used for Invoice Items across all service types where a more specific Fee category is not applicable.</description>
    <label>FEE</label>
</RecordType>