force-app/main/default/objects/tc9_et__Invoice_Item__c/recordTypes/tc9_et__Payment.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Payment</fullName>
    <active>true</active>
    <description>To be used for Invoice Items relating to Payment Items</description>
    <label>Payment</label>
</RecordType>