force-app/main/default/objects/tc9_et__Invoice_Item__c/recordTypes/tc9_et__Project_Services_Fee.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Project_Services_Fee</fullName>
    <active>true</active>
    <description>To be used for Invoice Items relating to Project Services Fees</description>
    <label>Project Services Fee</label>
</RecordType>