force-app/main/default/objects/tc9_et__Invoice_Item__c/recordTypes/tc9_et__Retainer_Fee.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Retainer_Fee</fullName>
    <active>true</active>
    <description>To be used for Invoice Items relating to Retainer Fees</description>
    <label>Retainer Fee</label>
</RecordType>